--- a/UI/crud/src/crud/style-align.css
+++ b/UI/crud/src/crud/style-align.css
@@ -16,7 +16,8 @@
 .align-row-evenly {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    /* align-items: center; */
+    flex-wrap: wrap;
 }
 
 
